--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,4 @@
-﻿(R) Races: can the world define its own ideas on culture and race, ie: a mordor type world would have elves, giants, etc.
+(R) Races: can the world define its own ideas on culture and race, ie: a mordor type world would have elves, giants, etc.
 	as defaults, but say the world admins also want a race of mobile plant like characters, would they have 
 	specialized armour, clothing and weapons needs.
 	-- suggests being able to build new races that aren't hard coded in.
@@ -16,16 +16,8 @@
 	exit directions, perhaps two views, top down, and side on, for up-down visuals.
 	-- suggests a compass like data-point in exit linkage for mapping directions, up down, n, e, s, w, ne, nw..
 	-- suggests indirectly, distance data-point in the linkage for the mapper as well.
-<<<<<<< HEAD
-	
-(C) Mapper:  ability to search for a player/mob and be located in the map.
-=======
 
-<<<<<<< HEAD
+(C) Mapper:  ability to search for a player/mob and be located in the map.
+
 (R) SnowShoes: not needed for rabbit like races, and any rabbit character killed in battle would drop a pair of 
 	cold cone protected magical snow shoes
-=======
-Mapper:  (C) ability to search for a player/mob and be located in the map.
->>>>>>> origin/master
->>>>>>> origin/master
- 
