--- a/Todo.txt
+++ b/Todo.txt
@@ -1,23 +1,18 @@
-(R) Races: can the world define its own ideas on culture and race, ie: a mordor type world would have elves, giants, etc.
-	as defaults, but say the world admins also want a race of mobile plant like characters, would they have 
-	specialized armour, clothing and weapons needs.
-	-- suggests being able to build new races that aren't hard coded in.
+(R) Races: admins can define unique races in addition to default race and class types. IE: race of wormy characters,
+	so specialized armour, clothing, weapons. Perhaps unique data points for locations like belly armour, antenna 
+	weapon points..	Add race specific setting on all item objects.
 
-(R) Size: chars can be small, fat, large, tall, wispy, massively muscled, normal, have a tail, ghostly, etc.
-	so how does that equate to clothing and armour, aside from the obvious sizing, a tail might exclude some gear,
-	ghostly might exclude all normal gear but add say an energy belt or light cloak of shimmer.
-	-- suggests gear can be race specific, new gear can be made on the fly specifically for it when a new race 
-		has been created. A race specific setting on all gear.. with unknown at compile time data types.
-	-- suggests loadable character attributes not already hard coded in, the coding doable, lots of fun
-		and rather complex in having derived class that has to load data points and the like not hard coded,
-		lots of casting, pointer manipulation etc.
+(R) Size as well as race: chars can be small, fat, large, tall, wispy, massively muscled, normal, have tails..
+	-- suggests gear can be size and race specific at the same time, new gear can be made on the fly after a new race
+		has been created. Add size/race specific settings on all gear? 
+		Abstract datatype arrays on characters for unknown attributes/data-points at compile time. 
+		Dynamic casting, reflection and pointer manipulation likely.
 
 (R) Builder: Area specific, a grid like view of the area's rooms, with links between them based on the rooms
 	exit directions, perhaps two views, top down, and side on, for up-down visuals.
 	-- suggests a compass like data-point in exit linkage for mapping directions, up down, n, e, s, w, ne, nw..
 	-- suggests indirectly, distance data-point in the linkage for the mapper as well.
 
-(C) Mapper:  ability to search for a player/mob and be located in the map.
+(C) Mapper: World view, ability to search for a player/mob and show location on map. Perhaps show all players on map
+	in live mode as they move about..
 
-(R) SnowShoes: not needed for rabbit like races, and any rabbit character killed in battle would drop a pair of 
-	cold cone protected magical snow shoes
