--- a/Todo.txt
+++ b/Todo.txt
@@ -21,3 +21,4 @@
 	  - player set,  per player settings, lag commands, verbose, output types
 	  - main output class - output in plain or ascii mode dependent on player preference.
 	  - first iteration to be a server/client in one project
+(C)   - ANSI features.  create an ansi class to modify output to ansi
