--- a/Todo.txt
+++ b/Todo.txt
@@ -18,7 +18,13 @@
 
 (C/R) - lag feature
       - multi world hand offs, item/mob mapping between worlds
-	  - player set,  per player settings, lag commands, verbose, output types
-	  - main output class - output in plain or ascii mode dependent on player preference.
-	  - first iteration to be a server/client in one project
+      - player set,  per player settings, lag commands, verbose, output types
+      - main output class - output in plain or ascii mode dependent on player preference.
+      - first iteration to be a server/client in one project
 (C)   - ANSI features.  create an ansi class to modify output to ansi
+(C/R) - room flags for "areaset" or "roomset" mobs lists
+      - AI actions for mobs to have random action based on level/class ie: {thief}(minlevel}{maxlevel}{action}
+      - more complex citizenry.  don't want 90% of the area empty with just spawn camping
+        ie: {area}{mob}{levelmin}{levelmax}{random%}
+      - need function opposite of "lag detect".  if 5 commands received in 5 second, agro mob can stop the player type function
+
