--- a/ToDo/Todo.txt
+++ b/ToDo/Todo.txt
@@ -29,4 +29,11 @@
       - need function opposite of "lag detect".  if 5 commands received in 5 second, agro mob can stop the player type function
 (C/R) - address the need to compile for simple things as new commands, emotes, etc.
         hard code base functions, grouping by command function.
+(R)		-addendum to last-
+		xml files containing verb sequences that, when loaded, will call hard coded functions, grouping the verbs like script actions
+		in the xml as building blocks from small functions grouped together to perform larger functions and so on.. 
+		say.. mob plugin to open a door IE: "initOpenDoor", "getRoomExitNames", "getRandomExitNameFromNames", "tryOpenDoor". 
+		grouped under <Door><Open><...></Open></Door> which could be in a section called leaveRoom which might be in a file called 
+		Wander.xml.	then, to use part of it differently, switching out the randomExit calls to those that gets a room closer
+		to a player for tracking.. 
 
