--- a/Dialogs/Mountain.resx
+++ b/Dialogs/Mountain.resx
@@ -153,4 +153,63 @@
   <metadata name="connectionPoller.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAgAwAABMLAAATCwAAAAAAAAAA
+        AAAGKS0AERQBAwQCCQwAHSEBJywDMTwCIywDGCAAIykBQ04HQlEADBgMQUQNRk8JNkMJN0ILREYFNTkA
+        MTkFMThMj5BHfX4ZSUoVRUsPOj0kW15Bc384Y3YwWnErVmsjTVoJJzIABAkBBgkBDhADHyAELTAAFiEC
+        JDEALToAGCYDJzcJUVsCHygFHCQVWV4aSVEcRlIKJy4AGSMQQUsEHCIPIiUUNzsDIykKKTIbQU0zYnA0
+        aX05b4YvZHk0boE0dokCGiYCCA8ACw8BFRoHICQCFx8CAxECEh8CHCgEKDAAFR0FKi4JOTsDFh0UQUUW
+        OkAfQk8OJCoLHyoKKjUBDBQBBw4OKC8jPUQ3VWBDaHY1V2chRlopU2ouY3c9d4M+cn8CEyABChMADhAC
+        FxgAFhsBHicFLzwOQUsNQUcJQEMPMDMHGh8PPEAIKC4WMjkXNUAVMjsRLzQNMTcOKTMiP0QjRUsiQEsZ
+        NTwdNz0hMzofMj8vUGMbOkkyVV9Re4dMdYQCEyABChMBExIDGxsCEhkEJjMQTFgUS1INPEQTOUUeRU0g
+        RU0cP0kNJjANKTAdQEoOKC8bNkAlRk8fPkcvVFwoSVIlRE0eO0QPKCwAAAEACAsfO0ITJishMTBVcXFe
+        jZECHSsAGRsCIiEAGR0HJCsOMjwZPkYSNj4UNT4fQkwePkkkSFIpSVQbPUMNLTIWNT4bO0YdO0YzVF0y
+        VmA3XWk1U14fP0UkRkwaOUIpRE4oPkQMGiAKExckNDNEXFpfiIoDJTIBFBkAGxwACRAABxAMKTAUMDcN
+        Iy4RMDkgQUoeP0gaPUckQk0SNz8TOkISLjkLJTESNj4XO0EwVV01V2QqTVcXO0MUMzwfP0o6ZGshPkIC
+        DhAFGyE3UlxXcXhWdXgAFBoEISYGGR4BCBEECRIQMDUKMTkMLDIHKzMTNTsSMjgNKjMkR1EmSlInTFQe
+        OEQFGyEWO0MmRlEiR08SLzYaOkUpUF4xVmQ2WmobT1UOOD0KIy0FJC0AGiMqSFNvj5oGJiwHNDgIKjAK
+        JzUdRUoOQ0YBKzINMjoTPEUYP0cfPkcTND0UMTojR08gQkgOKC4QJiwZQEkeQkwRMzkMLDIcQEolR1Qh
+        QUwdPUotVFw4aXMyZ3QkUF0XQlMaSV5YiZckTVYfOT8RKzEdNjo1XGUVQlACMz0UMTYLFxsHIScYP0gW
+        O0MGIyoAFBoIKC4MKjUNKjENNDwHIiwQKjEZO0EKMDUKKjAZOkMpRVBQcHtge39QbXFXgY1ej59Ri54p
+        XmssT1kuRUcMFxsFCBAzVGMlSVkXPUkIHioAAgcFGB0GLjMRNT8YQkkPKTAAGB4NLjcKKjAFHyYBEx4G
+        IywHKzEOMDYaNDogOT0sQUMwQ0hFU1JYbHE4UVs6T1dBa3guZXQAFB8IHCEAAAQUJS4/Z2woS1UeRVQB
+        L0ECKDQHJzICFx8CCxQIIigLKzEDGCABDRcADRYBDREFGB0AGyIBFBsIEhkMFh0bJys8T1JDV1xWcHZl
+        iZMQICcCAAAHGRonVFgCCRIAFhwADhQwUlhLd3gfQ00XQlUOP1UELjoBJTUEKTcAGSACChEBBg8ADBQA
+        AwsBAwsADRAADA4AAAEAAAUHFx0lQERhf4BskZVTg4lkk5tpnJ87YWUULDITKS4/ZGIBExoABgkFKi5M
+        eoFxm6guVWMTOEYLMkABGCAEGCMBJDIBIC8EIi0EFx4DDhIBCg4ABQoBCRAABAkHEhYlRVA8anVZiY17
+        rK5nmZ9ZjZRrm52ItLN+r7clUGM5ZXJ/qbAiND0ZJigXKSofOT9mkaBsiZdDXmIuS1AVLTkBDRcAFx4A
+        EB0CGCQMMTUPLzQJKDEcMzsgMzgrRkpKanVQfpBShpZZipRpk59/oqyQp6+asbONqq9niZZBanlLf4uG
+        r7hXcnwuS1IKEAsBCQg1W1+Pr7R2iotccHVeeYMoSFMSLTcFHSMBHiMPNDwQM0AbSFM6Zm1QdX1YhYlg
+        iI1WhIxrmrBxmbKAoK2nucC6x8mturyTrbt2kKByoalmnqmv0ddugoNdeognPz8dNDAbNTUsQT9PbndW
+        e4k9ZHMyVGEWLjotSFIpUV0RO0gwU11UdIFVhpBZjI9zmZ2GoKB8naZzl6dwnbJ0lKdzjJZyipBWeX2F
+        qa+bur2Arrl7ssGny8tlbGllgYgsTFErS1AUMjcAAAEPGSA8W2opTFYKISkNICckPkwSKT8VPEpcen9m
+        gIdSeoZhio1/lZqZrLFhiZxXhJ8yTFg8XGd4pLwSMj82WmKgwMWVr6mSvr18sLehurxCRD5jd3gyVWIw
+        V2BGcHcNLC8EAAA0SlVIancAAgYFBAYZLzUACRMlRE1nipRuiI95laBsiZhHXmZmg4hjkrIrUWkAAQAo
+        SV14qcMTPk1ljJTB4N+jwbx4pJ6TtbT//v82PjdGWFlSdoA2XGgsUl4mSlAAExAoQUNMZmwRLzoCAwcA
+        AwIRJzJLbXpmjJhykaB8lqJNdII4U2FDYGR2mKhFZ34mUGd3pL9ZiJYhU19qmaGAqKeMtLONqqeZqqGL
+        kotDR0FDV1w5VltCZm4oSlcrT1UGJCUWJyRgcW5den8hPkITJilDY2loi5V/orCAq7RWfYU5YW1LeINU
+        dnZgg4dvmqtzoLucvMdZdXVAdneBs799n6V6o6W219BiaWQFAQA9PzNAUVQoSVIRIiUSGiE/aHEdQEQb
+        KiZXYVuCkpFjhopGdXlbgYZ8n6N5qKyCtbhUgYQfQ0tNeoVllJxuk5eFmqK0w8yPpqhYd3adzMpObXAY
+        KSyhztJ/oZcoKhczLhk7OSckMS8YNDsAAAADDA8xVGImS08lOTQ3QD1lfoKKrbqUsb+atMBmjJFvlZmb
+        vcOCoq1eiZhwmKqavsakwcWruLrd6et4nKJQeHe+4+dleH8ADhV3pq4+V0kmHgc/OSY5OCMxNS8TGxsA
+        DQ8dLzYkOkUoRUomNDIcKilIcn5xorK31N260NactsKnxMuewMaIpquIp6q10dje8fTR5eq81dmjv8pZ
+        hoo+cHaev8K0x8xAU1o7XmFASS9KQCJFRCo4OyU7OSdLSkBNUUsvQEMeOUMcMDUWJiwsSE9rlp98p7CF
+        sraXur2jvb2Fqal1m517nJhfgYCXtLGguLamxcaBpas6X2MuRkR4jY+0yM3U3dq5wcFgcGk5Nx9TSy1T
+        UTJARCclJxFJSTdzdmc/UVIePUwdN0MwTFNCW2V5i4qKpqZ0mp5ulZNVenZReHpJcnU6ZWgzXVxSdnZX
+        e3tNaWktRD9Ralxyh3iWq6Khur69zdSksbNHTkFIPSdOTTNPVDVAOyYaIwkkKRRXYVUvPkEaKzhUcXqL
+        qLGDmKCDkpSLoJiRp6J4j5FqipB1lp99naN3oaZ6n6ODp62HtLh7m5p1hnucppmcpZuZqq2qvcDA09p1
+        iY4yMChQRTFARCtFTDEwLBkLHAcTFARBQjJ3hXmlsauot6+Qn5GsxcGpxcyiu72DmpWOqaaGqKh6pKNr
+        nZ2bu8CpzNCMtruUv8K+3dza5ubR4eChtLesvbrp8fC/z9VCVldAOzJKQzI6Oyc9PykdIQ4CFAMXHQwp
+        Hw1ubFqEi34xMSUgGgdQUjxygHV5jY5ohIRyjo6Qr66Qt7mGq7Ocvr6QsbSIp6qfu7ytwsOYpqRzhHle
+        aVVUW0BqcF1SWVI/QDdaUkVHRDY8OCY4NSAOHQ8DFAcWIBA0LhsoGwsKBAAAAQAUEwkdEAAoGgc5NB9G
+        SzY7QzJbYlVudG92f3x1gYFLWFZHTUhLVUlISzxDPCtNRitSTitKSys4QyJPTjRqXU1cUUlRSD9JPy46
+        MiECGAwEFwYeIw4oKhcuMx4tLhoRGg0HFQkqIxQ2LBo5LhhCNyE8OCUlIxEyJRVJOylGPy44NScoIBMo
+        Ig9ANh5ZSTJeUDlQUTdGVDhHXz9WZUZeXUhfVkxcSUROPjI/MSUBGAkMGQkoKBghJhcfLxgsNB0dIRUJ
+        EggZGw8vKBc5Mh87NCUvMiIyNCFMPy9cUD5UUD4zPS0rMyJAPiZGSCtHRC8/Py84Oys4SDE5WTo6Y0NR
+        YEtgVk9ZSkdAOzIwLCEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
